--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
                         <li><a href="#">Our Collection</a></li>
                         <li><a href="/journal.html">Journal</a></li>
                         <li><a href="#">Contact</a></li>
-                        <li><a href="#">About Us</a></li>
+                        <li><a href="/about.html">About</a></li>
                     </ul>
                 </div>
                 <div class="topnav-right">
@@ -81,7 +81,7 @@
     <div class="about">
         
         <div class="about-left">
-        <img src="assets/about.jpg" alt="">
+        <img src="/assets/about.jpg" alt="">
     </div>
     
     <div class="about-right">
@@ -90,9 +90,7 @@
                 I believe in creating our treasure trove of extraordinary objects, a modern version of the 16th Century "Wunderkammer" mixing everything from artefacts to artworks and furniture, in an intuitive way. I was born in Paris and was greatly influenced by the spirit of the city. When I discovered the eclectic homes of Elsa Schiaparelli and YSL & Pierre Bergé I fell in love with this aesthetic.
                 <br><br>
                 After receiving a History Degree from King's College University in London, I worked at Sotheby's and went on to have a career in high fashion. Always a treasure hunter and whilst collecting art and vintage design myself an opportunity presented itself to work for an art collector in London which inspired me for this
-                project. The glamour of the 1970's has always been an inspiration and most of the objects I pick have a Hollywood Regency allure to them along with of course the inevitable Mid Century period.
-                <br><br>
-                Italian, French and American Mid Century furniture and objects are the muses of Taramis Interiors.
+                project. The glamour of the 1970's has always been an inspiration and most of the objects I pick have a Hollywood Regency allure to them along with of course the inevitable Mid Century period. Italian, French and American Mid Century furniture and objects are the muses of Taramis Interiors.
                 <br><br>
                 Always on the lookout for special original items and eternally searching for beauty...
             </i>
