--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
           <div class="topnav-left">
             <ul>
               <li><a href="#">Our Collection</a></li>
-                        <li><a href="journal.html">Journal</a></li>
-                        <li><a href="#">Contact</a></li>
-                        <li><a href="#">About Us</a></li>
+              <li><a href="/journal.html">Journal</a></li>
+              <li><a href="#">Contact</a></li>
+              <li><a href="/about.html">About</a></li>
             </ul>
           </div>
           <div class="topnav-right">
@@ -56,7 +56,7 @@
             <br />
             <div class="desc">
               Online gallery for vintage design furniture based in Berlin.
-              info@sara-vie-de-fu.com
+              info@taramis.net
             </div>
 
             <p></p>
@@ -86,64 +86,514 @@
 
     <div class="products">
 
-      <div class="filterDiv seating archive">
-        <a href="/pages/2-door-sideboard-by-willy-rizzo-1970s.html">
+      <div class="filterDiv storage">
+        <a href="/pages/art-01.html">
         <div class="product" data-aos="zoom-in" data-aos-delay="100">
           <div class="product-img">
-            <img src="/products/2-Door Sideboard by Willy Rizzo 1970’s/2-door-sideboard-by-willy-rizzo-1970s-1.jpg" alt="" />
+            <a href="/pages/art-01.html"><img src="/products/art-01/art-01_1.jpg" alt="" /></a>
           </div>
           <div class="product-info">
-            <div class="p-name">Very large Modular 1970’s Sofa (2 pieces)</div>
+            <a href="/pages/art-01.html"><div class="p-name">2-Door Sideboard by Willy Rizzo 1970’s</div></a>
             <br />
-            <p>Beautiful 1970’s Modular sofa reupholstered in cream velvet. Very high quality!It consists of two elements ( each 340 cm long) that can be arrange as desired.  Would look amazing in any mid-
+            <p>Very nice laminated 2- door 1973 sideboard by WIlly Rizzo. Sideboard in glossy black melamine lacquered, two chrome metal angles on the front corners.
             </p>
             <br>
-            <p>SOLD</p>
+            <p>Price:</p>
+            <p>Upon request</p>
           </div>
         </div>
       </a>
     </div>
 
-    <div class="filterDiv seating archive">
-      <a href="/pages/mid-century-1950s-italian-armchairs.html">
+    
+    <div class="filterDiv lighting">
+      <a href="/pages/art-02.html">
       <div class="product" data-aos="zoom-in" data-aos-delay="100">
         <div class="product-img">
-          <img src="/products/Mid Century 1950’s Italian Armchairs/mid-century-1950s-italian-armchairs-1.jpg" alt="" />
+          <a href="/pages/art-02.html"><img src="/products/art-02/art-02_2.jpg" alt="" /></a>
         </div>
         <div class="product-info">
-          <div class="p-name">Mid Century 1950’s Italian Armchairs</div>
+          <a href="/pages/art-02.html"><div class="p-name">Gaetano Sciolari Chromed brass chandelier</div></a>
           <br />
-          <p>
-            Italian armchair in the style of Marco Zanuso upholstered in new textile. Brass legs
-          </p>
+          <p>A 9 light chandelier from Sciolari. Chrome plated brass.</p>
           <br>
-          <p>SOLD</p>
+          <p>Price:</p>
+          <p>Upon request</p>
         </div>
       </div>
     </a>
   </div>
 
-
-
   <div class="filterDiv seating">
-    <a href="/pages/large-curved-coma-sofa-1950s.html">
+    <a href="/pages/art-03.html">
     <div class="product" data-aos="zoom-in" data-aos-delay="100">
       <div class="product-img">
-        <img src="/products/Large curved Coma sofa 1950’s/large-curved-coma-sofa-1950s-1.jpg" alt="" />
+        <a href="/pages/art-03.html"><img src="/products/art-03/art-03_1.jpg" alt="" /></a>
       </div>
       <div class="product-info">
-        <div class="p-name">Large Curved Coma Sofa 1950’s</div>
+        <a href="/pages/art-03.html"><div class="p-name">Large curved Coma sofa 1950’s
+        </div></a>
         <br />
-        <p>
-          A large Italian curved sofa in the style of Ice Parisi on brass feet, blue velvet. 1970’s
+        <p>A large Italian curved sofa in the style of Ice Parisi on brass feet, blue velvet. 1970’s
         </p>
         <br>
-        <p>Upon Request</p>
+        <p>Price:</p>
+        <p>Upon request</p>
       </div>
     </div>
   </a>
 </div>
 
+<div class="filterDiv tables">
+  <a href="/pages/art-04.html">
+  <div class="product" data-aos="zoom-in" data-aos-delay="100">
+    <div class="product-img">
+      <a href="/pages/art-04.html"><img src="/products/art-04/art-04_1.jpg" alt="" /></a>
+    </div>
+    <div class="product-info">
+      <a href="/pages/art-04.html"><div class="p-name">Large Italian vintage smoked glass and chrome dining table 1970’s
+      </div></a>
+      <br />
+      <p>Very large 1970’s Italian dining table with a sculptural base an smoked glass top
+      </p>
+      <br>
+      <p>Price:</p>
+      <p>Upon request</p>
+    </div>
+  </div>
+</a>
+</div>
+
+<div class="filterDiv other">
+  <a href="/pages/art-05.html">
+  <div class="product" data-aos="zoom-in" data-aos-delay="100">
+    <div class="product-img">
+      <a href="/pages/art-05.html"><img src="/products/art-05/art-05_1.jpg" alt="" /></a>
+    </div>
+    <div class="product-info">
+      <a href="/pages/art-05.html"><div class="p-name">Large Murano Glass Vase by Cenedese - Clear
+      </div></a>
+      <br />
+      <p>Spectacular free form clear Murano glass vase features very large glass buttons all around. Murano blown glass, entirely hand made. Very rare and as decorative as a sculpture.
+      </p>
+      <br>
+      <p>Price:</p>
+      <p>Upon request</p>
+    </div>
+  </div>
+</a>
+</div>
+
+<div class="filterDiv other">
+  <a href="/pages/art-06.html">
+  <div class="product" data-aos="zoom-in" data-aos-delay="100">
+    <div class="product-img">
+      <a href="/pages/art-06.html"><img src="/products/art-06/art-06_1.jpg" alt="" /></a>
+    </div>
+    <div class="product-info">
+      <a href="/pages/art-06.html"><div class="p-name">Large Murano Glass Vase by Cenedese - Emerald
+      </div></a>
+      <br />
+      <p>Spectacular free form emerald Murano glass vase features very large glass buttons all around. Murano blown glass, entirely hand made.
+      </p>
+      <br>
+      <p>Price:</p>
+      <p>Upon request</p>
+    </div>
+  </div>
+</a>
+</div>
+
+<div class="filterDiv tables">
+  <a href="/pages/art-07.html">
+  <div class="product" data-aos="zoom-in" data-aos-delay="100">
+    <div class="product-img">
+      <a href="/pages/art-07.html"><img src="/products/art-07/art-07_1.jpg" alt="" /></a>
+    </div>
+    <div class="product-info">
+      <a href="/pages/art-07.html"><div class="p-name">Luigi Saccardo round dining table 1970’s
+
+      </div></a>
+      <br />
+      <p>Round dining table designed by Luigi Saccardo for Maison Jansen- Armet, France/Italy 1970’s The table features a thick glass top.
+      </p>
+      <br>
+      <p>Price:</p>
+      <p>Upon request</p>
+    </div>
+  </div>
+</a>
+</div>
+
+<div class="filterDiv lighting archive">
+  <a href="/pages/art-08.html">
+  <div class="product" data-aos="zoom-in" data-aos-delay="100">
+    <div class="product-img">
+      <a href="/pages/art-08.html"><img src="/products/art-08/art-08_1.jpg" alt="" /></a>
+    </div>
+    <div class="product-info">
+      <a href="/pages/art-08.html"><div class="p-name">Maison Jansen Pal Tree Floor Lamp 1970’s
+      </div></a>
+      <br />
+      <p>Highly decorative Maison Jansen palm tree floor lamp. Torch cut patinated brass trunk an leaves coming out of the laminated base.
+      </p>
+      <br>
+      <p>Price:</p>
+      <p>SOLD</p>
+    </div>
+  </div>
+</a>
+</div>
+
+<div class="filterDiv seating archive">
+  <a href="/pages/art-09.html">
+  <div class="product" data-aos="zoom-in" data-aos-delay="100">
+    <div class="product-img">
+      <a href="/pages/art-09.html"><img src="/products/art-09/art-09_1.jpg" alt="" /></a>
+    </div>
+    <div class="product-info">
+      <a href="/pages/art-09.html"><div class="p-name">Mid Century 1950’s Italian Armchairs
+      </div></a>
+      <br />
+      <p>Italian armchair in the style of Marco Zanuso upholstered in new textile. Brass legs
+      </p>
+      <br>
+      <p>Price:</p>
+      <p>SOLD</p>
+    </div>
+  </div>
+</a>
+</div>
+
+<div class="filterDiv lighting archive">
+  <a href="/pages/art-10.html">
+  <div class="product" data-aos="zoom-in" data-aos-delay="100">
+    <div class="product-img">
+      <a href="/pages/art-10.html"><img src="/products/art-10/art-10_5.jpg" alt="" /></a>
+    </div>
+    <div class="product-info">
+      <a href="/pages/art-10.html"><div class="p-name">A pair of 1970’s table lamp brass frame and opal glass shade
+      </div></a>
+      <br />
+      <p> Exquisite pair of large modernist table lamps realised in Murano, Italy. Brass and translucent handblown Murano glass embellishments
+      </p>
+      <br>
+      <p>Price:</p>
+      <p>SOLD</p>
+    </div>
+  </div>
+</a>
+</div>
+
+<div class="filterDiv tables">
+  <a href="/pages/art-11.html">
+  <div class="product" data-aos="zoom-in" data-aos-delay="110">
+    <div class="product-img">
+      <a href="/pages/art-11.html"><img src="/products/art-11/art-11_1.jpg" alt="" /></a>
+    </div>
+    <div class="product-info">
+      <a href="/pages/art-11.html"><div class="p-name">Paul Evans side table 
+      </div></a>
+      <br />
+      <p>Paul Evans Cityscape steel table. Fine example of Paul Evans’ later more polished work who is renown for his brutalist creations.
+      </p>
+      <br>
+      <p>Price:</p>
+      <p>Upon request</p>
+    </div>
+  </div>
+</a>
+</div>
+
+<div class="filterDiv other archive">
+  <a href="/pages/art-12.html">
+  <div class="product" data-aos="zoom-in" data-aos-delay="120">
+    <div class="product-img">
+      <a href="/pages/art-12.html"><img src="/products/art-12/art-12_1.jpg" alt="" /></a>
+    </div>
+    <div class="product-info">
+      <a href="/pages/art-12.html"><div class="p-name">1970’s Curtis Jere Elm Trees Wall Sculpture
+
+      </div></a>
+      <br />
+      <p>Fabulous copper and brass Elm Trees Wall sculpture made in California in the 1970’s. Highly decorative and collectable
+      </p>
+      <br>
+      <p>Price:</p>
+      <p>SOLD</p>
+    </div>
+  </div>
+</a>
+</div>
+
+<div class="filterDiv seating">
+  <a href="/pages/art-13.html">
+  <div class="product" data-aos="zoom-in" data-aos-delay="120">
+    <div class="product-img">
+      <a href="/pages/art-13.html"><img src="/products/art-13/art-13_1.jpg" alt="" /></a>
+    </div>
+    <div class="product-info">
+      <a href="/pages/art-13.html"><div class="p-name">1980’s Small Modular Sofa
+      </div></a>
+      <br />
+      <p>Small 1980’s modular sofa reupholstered in blue velvet.
+      </p>
+      <br>
+      <p>Price:</p>
+      <p>Upon request</p>
+    </div>
+  </div>
+</a>
+</div>
+
+<div class="filterDiv seating">
+  <a href="/pages/art-14.html">
+  <div class="product" data-aos="zoom-in" data-aos-delay="120">
+    <div class="product-img">
+      <a href="/pages/art-14.html"><img src="/products/art-14/art-14_1.jpg" alt="" /></a>
+    </div>
+    <div class="product-info">
+      <a href="/pages/art-14.html"><div class="p-name">Tobia & Afra Scarpa 8 Monk Chairs set, 1974
+      </div></a>
+      <br />
+      <p>Black leather seat and rest chairs with walnut legs, 8 available
+      </p>
+      <br>
+      <p>Price:</p>
+      <p>Upon request</p>
+    </div>
+  </div>
+</a>
+</div>
+
+<div class="filterDiv other">
+  <a href="/pages/art-16.html">
+  <div class="product" data-aos="zoom-in" data-aos-delay="120">
+    <div class="product-img">
+      <a href="/pages/art-15.html"><img src="/products/art-15/art-15_1.jpg" alt="" /></a>
+    </div>
+    <div class="product-info">
+      <a href="/pages/art-15.html"><div class="p-name">Very large Brutalist sculpture
+      </div></a>
+      <br />
+      <p>Very large wall sculpture from ex Yugoslavia, circa 1970s. Mixed media: iron, wood and aluminium foil. Not heavy. Unique, one of a kind. 
+      </p>
+      <br>
+      <p>Price:</p>
+      <p>Upon request</p>
+    </div>
+  </div>
+</a>
+</div>
+
+<div class="filterDiv seating">
+  <a href="/pages/art-16.html">
+  <div class="product" data-aos="zoom-in" data-aos-delay="120">
+    <div class="product-img">
+      <a href="/pages/art-16.html"><img src="/products/art-16/art-16_1.jpg" alt="" /></a>
+    </div>
+    <div class="product-info">
+      <a href="/pages/art-16.html"><div class="p-name">Very large Modular 1970’s Sofa (2 pieces)
+      </div></a>
+      <br />
+      <p>Beautiful 1970’s Modular sofa reupholstered in cream velvet. Very high quality!It consists of two elements ( each 340 cm long) that can be arrange as desired.
+      </p>
+      <br>
+      <p>Price:</p>
+      <p>SOLD</p>
+    </div>
+  </div>
+</a>
+</div>
+
+
+<div class="filterDiv tables">
+  <a href="/pages/art-17.html">
+  <div class="product" data-aos="zoom-in" data-aos-delay="120">
+    <div class="product-img">
+      <a href="/pages/art-17.html"><img src="/products/art-17/art-17_1.jpg" alt="" /></a>
+    </div>
+    <div class="product-info">
+      <a href="/pages/art-17.html"><div class="p-name">Vintage Coffee/Bar Table by Willy Rizzo - Chocolate Brown
+
+      </div></a>
+      <br />
+      <p>Elegant and hard to find chocolate brown coffee cocktail table by Willy Rizzo. Lacquered wood with parts and details in polish steel. 
+
+      </p>
+      <br>
+      <p>Price:</p>
+      <p>Upon request</p>
+    </div>
+  </div>
+</a>
+</div>
+
+<div class="filterDiv seating archive">
+  <a href="/pages/art-18.html">
+  <div class="product" data-aos="zoom-in" data-aos-delay="120">
+    <div class="product-img">
+      <a href="/pages/art-18.html"><img src="/products/art-18/art-18_1.jpg" alt="" /></a>
+    </div>
+    <div class="product-info">
+      <a href="/pages/art-18.html"><div class="p-name">Warren Platner Armchair      </div></a>
+      <br />
+      <p>Original plum velvet upholstery on curved steel rods. Designed in 1966 and produced in 1970. 
+
+      </p>
+      <br>
+      <p>Price:</p>
+      <p>Upon request</p>
+    </div>
+  </div>
+</a>
+</div>
+
+<div class="filterDiv lighting">
+  <a href="/pages/art-20.html">
+  <div class="product" data-aos="zoom-in" data-aos-delay="120">
+    <div class="product-img">
+      <a href="/pages/art-20.html"><img src="/products/art-20/art-20_1.jpg" alt="" /></a>
+    </div>
+    <div class="product-info">
+      <a href="/pages/art-20.html"><div class="p-name">1970’s Hans Kögl brass floor lamp 
+
+      </div></a>
+      <br />
+      <p>Hans Kögl  1970’s  Holywood Regency style. Beautiful floor lamp gilt metal stems and leafs holing 5 light bulbs. Decorated with 10 white enamel flowers.
+
+      </p>
+      <br>
+      <p>Price:</p>
+      <p>Upon request</p>
+    </div>
+  </div>
+</a>
+</div>
+
+<div class="filterDiv lighting">
+  <a href="/pages/art-21.html">
+  <div class="product" data-aos="zoom-in" data-aos-delay="121">
+    <div class="product-img">
+      <a href="/pages/art-21.html"><img src="/products/art-21/art-21_1.jpg" alt="" /></a>
+    </div>
+    <div class="product-info">
+      <a href="/pages/art-21.html"><div class="p-name">1970’s Murano Chandelier Toni Zuccheri for Venini 
+
+      </div></a>
+      <br />
+      <p>1980’s Italian vintage Venini Murano chandelier, 48 large glass tubes in star shape, beautiful colours amber, opal silk baby blue and transparent.
+
+      </p>
+      <br>
+      <p>Price:</p>
+      <p>Upon request</p>
+    </div>
+  </div>
+</a>
+</div>
+
+<div class="filterDiv tables archive">
+  <a href="/pages/art-22.html">
+  <div class="product" data-aos="zoom-in" data-aos-delay="122">
+    <div class="product-img">
+      <a href="/pages/art-22.html"><img src="/products/art-22/art-22_1.jpg" alt="" /></a>
+    </div>
+    <div class="product-info">
+      <a href="/pages/art-22.html"><div class="p-name"> 1970’s Willy Rizzo Sliding Bar low table
+      </div></a>
+      <br />
+      <p>Polished aluminium with two tinted mirror sliding surfaces. Internal storage finished in mirror. Perspex bottle holder. Black laminate plinth.
+      </p>
+      <br>
+      <p>Price:</p>
+      <p>SOLD</p>
+    </div>
+  </div>
+</a>
+</div>
+
+<div class="filterDiv tables">
+  <a href="/pages/art-23.html">
+  <div class="product" data-aos="zoom-in" data-aos-delay="123">
+    <div class="product-img">
+      <a href="/pages/art-23.html"><img src="/products/art-23/art-23_1.jpg" alt="" /></a>
+    </div>
+    <div class="product-info">
+      <a href="/pages/art-23.html"><div class="p-name">Italian Vintage Glass And Chrome Dining Table 1970’s
+      </div></a>
+      <br />
+      <p>An oval 1970’s Italian glass and chrome dining table. 
+      </p>
+      <br>
+      <p>Price:</p>
+      <p>Upon request</p>
+    </div>
+  </div>
+</a>
+</div>
+
+
+<div class="filterDiv lighting">
+  <a href="/pages/art-24.html">
+  <div class="product" data-aos="zoom-in" data-aos-delay="123">
+    <div class="product-img">
+      <a href="/pages/art-24.html"><img src="/products/art-24/art-24_1.jpg" alt="" /></a>
+    </div>
+    <div class="product-info">
+      <a href="/pages/art-24.html"><div class="p-name">Brass And Murano Glass Table Lamp By Salviati 1960
+
+      </div></a>
+      <br />
+      <p>Stunning table or floor lamp consisting of hand blown Murano glass multicolour decorations mounted on a brass base. 
+      </p>
+      <br>
+      <p>Price:</p>
+      <p>Upon request</p>
+    </div>
+  </div>
+</a>
+</div>
+
+<div class="filterDiv tables">
+  <a href="/pages/art-25.html">
+  <div class="product" data-aos="zoom-in" data-aos-delay="123">
+    <div class="product-img">
+      <a href="/pages/art-25.html"><img src="/products/art-25/art-25_1.jpg" alt="" /></a>
+    </div>
+    <div class="product-info">
+      <a href="/pages/art-25.html"><div class="p-name">French Vintage Brass Side Tables 1970’s
+      </div></a>
+      <br />
+      <p>Two very nice brass side tables. Comes with clear glass tops. France 1970’s
+      </p>
+      <br>
+      <p>Price:</p>
+      <p>Upon request</p>
+    </div>
+  </div>
+</a>
+</div>
+
+<div class="filterDiv other">
+  <a href="/pages/art-26.html">
+  <div class="product" data-aos="zoom-in" data-aos-delay="123">
+    <div class="product-img">
+      <a href="/pages/art-26.html"><img src="/products/art-26/art-26_5.jpg" alt="" /></a>
+    </div>
+    <div class="product-info">
+      <a href="/pages/art-26.html"><div class="p-name">Constantini Murano Glass Vases With Spikes
+      </div></a>
+      <br />
+      <p>A spectacular pair of Venetian vases, imposing in size in clear blown Murano glass, hand decorated with the technique rostrato; spikes of glass individually pulled in relief.
+      </p>
+      <br>
+      <p>Price:</p>
+      <p>Upon request</p>
+    </div>
+  </div>
+</a>
+</div>
 
 
     </div>
