--- a/index.html
+++ b/index.html
@@ -600,9 +600,7 @@
 
 
 
-   <!--  <div class="insta-widget">
-      <script src="https://cdn.lightwidget.com/widgets/lightwidget.js"></script><iframe src="//lightwidget.com/widgets/c20f3ac6625e543f8a8895fafbd124b5.html" scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width:100%;border:0;overflow:hidden;"></iframe>
-    </div>  -->
+<!-- LightWidget WIDGET --><script src="https://cdn.lightwidget.com/widgets/lightwidget.js"></script><iframe src="//lightwidget.com/widgets/947a05325510547cab2dc51326480fb1.html" scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width:100%;border:0;overflow:hidden;"></iframe>
     
     <footer>
       <h4 class="footer">
