--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         <a href="/pages/art-03.html"><img src="/products/art-03/art-03_1.jpg" alt="" /></a>
       </div>
       <div class="product-info">
-        <a href="/pages/art-03.html"><div class="p-name">Large curved Coma sofa 1950’s
+        <a href="/pages/art-03.html"><div class="p-name">Large curved Coma sofa
         </div></a>
         <br />
         <p>A large Italian curved sofa in the style of Ice Parisi on brass feet, blue velvet. 1970’s
